cilium/ciliumagent-metric_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-agent-metric
  namespace: kube-system
  labels:
    app: cilium
    k8s-app: cilium
spec:
  ports:
    - name: prom # Default endpoint for OpenTelemetry receiver.
      port: 9962
      protocol: TCP
      targetPort: 9962
  selector:
    k8s-app: cilium
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-operator-metric
  namespace: kube-system
  labels:
    name: cilium-operator
    io.cilium/app: operator
spec:
  ports:
    - name: promoperator # Default endpoint for OpenTelemetry receiver.
      port: 9963
      protocol: TCP
      targetPort: 9963
  selector:
    name: cilium-operator
