cilium/CiliumNetworkPolicy_collector.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-oteld
  namespace: otel
spec:
  endpointSelector:
    matchLabels:
      component: otel-collector
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: otel-demo
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "4317"
            - port: "4318"
